add dummy manager flow
